# tradingview-options-reticle

./: .flake8  .gitignore  CHANGELOG.md  README.md  builder.py  cli_play.py  concept2.pine  concept3.pine  concept3.py  concept4.pine  concept5.pine  concept6.pine  concept7.pine  database.db  db_play.py  downloader.py  lastprice.py  noxfile.py  prompt_play.py  pyproject.toml  watchlist.txt
concepts/: a_new_hope.py  builder.py  concept.pine  concept.py  concept2.py  datetime_concept.py  downloader.py  lastprice.py  price_play.py  prompt_play.py  readme.md  refactor.py  watchlist.py
docs/: tradingview.md  tradingview.txt
options_reticle/: __init__.py  builder.py  core.py  database.py  downloader.py  emoji.py  expiration.py  models.py  options.py  paths.py  quote.py  ticker.py  tradingview.py  watchlist_parser.py
options_reticle/templates/: fill.pine  head.pine  label.pine  option_function.pine  reticle.pine  variables.pine
templates/: emoji.pine  head.pine  label.pine  option_function.pine  reticle.pine  variables.pine
tests/: test_builder.py  test_options.py  test_paths.py  test_ticker.py  test_tradingview.py  test_watchlist.py
tests/test_builder/: test_builder.yml
tests/test_data/: appl_options_chain_data.pickle  test_option_data.toml  test_watchlist.txt
tests/test_options/: test_options_watchlist_created_from_file.yml  test_options_watchlist_meta_data.yml  test_options_watchlist_symbol_range.yml
