[tool.poetry]
name = "tradingview_option_targets"
version = "0.2.0"
description = "Generate option targets from tradingview watchlists."
authors = ["dgnsrekt <dgnsrekt@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"
lxml = "^4.5.2"
bullet = "^2.2.0"
jinja2 = "^2.11.2"
python-decouple = "^3.3"
pydantic = "^1.6.1"
enlighten = "^1.6.1"
html5lib = "^1.1"
beautifulsoup4 = "^4.9.1"
more-itertools = "^8.5.0"
typer = "^0.3.2"
loguru = "^0.5.2"
requests-html = "^0.10.0"
psycopg2-binary = "^2.8.6"
SQLAlchemy = "^1.3.19"
yfs = "^0.3.1"
requests-whaor = "^0.2.1"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest-watch = "^4.2.0"
tomlkit = "^0.7.0"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
